After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 770038 - [PATCH] Fix memory leak in _vte_file_stream_init()
[PATCH] Fix memory leak in _vte_file_stream_init()
Status: RESOLVED FIXED
Product: vte
Classification: Core
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: VTE Maintainers
VTE Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-08-17 14:40 UTC by Eric R. Schulz
Modified: 2016-08-26 22:58 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix memory leak in _vte_file_stream_init() (854 bytes, patch)
2016-08-17 14:40 UTC, Eric R. Schulz
none Details | Review

Description Eric R. Schulz 2016-08-17 14:40:12 UTC
Created attachment 333501 [details] [review]
Fix memory leak in _vte_file_stream_init()

g_object_new() calls _vte_boa_init(), so calling the init twice leaks memory.
The bug was introduced in ab8b3a34.
Comment 1 Christian Persch 2016-08-17 20:11:16 UTC
Looks right. Egmont ?
Comment 2 Christian Persch′ 2016-08-20 19:23:51 UTC
Comment on attachment 333501 [details] [review]
Fix memory leak in _vte_file_stream_init()

Ok to commit to master and 0-44.
Comment 3 Egmont Koblinger 2016-08-26 22:58:13 UTC
Yeah I guess it's okay. Committed. Thanks!