widget: Fix memory leak in _vte_file_stream_init()

g_object_new() calls _vte_boa_init(), so calling the init twice leaks memory.

The bug was introduced in commit ab8b3a3465625e08e4aa5657d13d54b6818a231a.

https://bugzilla.gnome.org/show_bug.cgi?id=770038
(cherry picked from commit 2796f97eca37613128ee2a4c71e85cad2bfea643)